# SPOT

./: .gitignore  .gitmodules  LICENSE  README.md  demo.py  install_spot.sh  pyproject.toml  requirements.txt
configs/: _logging.yaml
configs/blocks/: blocks.yaml  blocks_greedy.yaml
configs/scenes/: three_cubes.yaml
configs/training/: model_deviation_estimator.yaml  object_suggester.yaml  suggester.yaml
scripts/: collect_keyboard_demos.py  execute_real_world_plan.sh
scripts/data_gen/: save_initial_states.py
scripts/eval/: analyze_metrics.py  plot_task_complexity.py
scripts/planning/: benchmark_plans.py  benchmark_sim_execution.py  goal_scorer_blocks.py
scripts/real_world/: goal_scorer.py  plan_real_world.py
scripts/training/: train_mde.py  train_object_suggester.py  train_placement_suggester.py
spot/: collision.py  demo_collection.py  evaluation.py  heuristics.py  mde.py  object_suggester.py  suggester.py  suggester_utils.py
spot/datasets/: mde_datasets.py  obj_suggester_dataset.py
spot/models/: mde_model.py  object_suggester_classifier.py
spot/planners/: a_star.py  greedy_rollout.py  random_rollout.py
spot/pybullet_env/: dl_custom_urdf.bash
spot/pybullet_env/scene_gen/: generate_scene.py  generate_scene_demo.py
spot/pybullet_env/utils/: camera_utils.py
spot/utils/: data_collection_utils.py  path_utils.py
spot/visualization/: graph.py
