[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spot"
version = "0.1.0"
description = "A local Python package"
requires-python = ">=3.8"
dependencies = ["numpy"]               # Add dependencies here

[tool.setuptools.packages.find]
where = ["."]
